Adds logo and changes textview character size

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">fs_korinthias</string>
+    <string name="app_name">FS Korinthias</string>
     <string name="title_home">FS Korinthias</string>
     <string name="title_dashboard">FS Korinthias</string>
     <string name="title_home_bottom">Important</string>
@@ -15,15 +15,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="genika">Μετά από δύο μεγάλα διαλείμματα, από τις 6.30 έχει ξεκινήσει ο τρίτος γύρος της τηλεδιάσκεψης ενώ σε όλες αυτές τις ώρες η Ιταλία αντιδρά σθεναρά σε ό,τι προτάσεις βάζουν στο τραπέζι οι Βόρειοι, από το μπλοκ των οποίων ως οι πιο «σκληρο» εμφανίζονται οι Ολλανδοί
+    <string name="mainShareNews">Άρθρο απο το Φ.Σ.Κορινθίας:</string>
+    <string name="shareNews">Share app:</string>
 
-Η «επιτυχία» δεν ήρθε όμως εχθές από εκεί που την περίμεναν. Αντιθέτως ήρθε από την ΕΚΤ και την Κριστίν Λαγκάρντ, που επανέφερε το περίφημο «waiver» για την Ελλάδα (το οποίο πολλοί εξ αυτών επιζητούσαν το 2015) τώρα που το έχει πραγματική ανάγκη η χώρα. Η ΕΚΤ δικαίωσε το ρόλο της και πλέον, κατ’εξαίρεσιν, τα ομόλογα που εκδίδει ή υπογράφει η Ελληνική Δημοκρατία, θα γίνονται δεκτά για τακτική χρηματοδότηση. Το πραγματικό κέρδος είναι ότι πλέον τράπεζες και ελληνική οικονομία έχουν απεριόριστη πρόσβαση σε ρευστό! Και μαζί με την συμμετοχή της χώρας στην έκτακτη χρηματοδότηση του QE, τα πολύπαθα ελληνικά κρατικά ομόλογα αντιμετωπίζονται πια, σχεδόν, σαν να ανήκαν… σε επενδυτική βαθμίδα -παρότι απέχουν πολύ απέχουν ακόμα όμως!
-
-Τα «δώρα» αυτά δόθηκαν στη χώρα για να αντιμετωπίσει μια λαίλαπα για την οποία αντικειμενικά δεν φέρει καμία ευθύνη. Ενώ προ ετών τα στερήθηκε, για να αντιμετωπίσει μια καταστροφή και τον «Αρμαγεδδώνα» για τον οποίο απειλούσε εκβιαστικά ότι θα προκαλέσει παγκοσμίως -αλλά τελικά τον έζησε μόνη και εγκαταλελειμμένη για χρόνια.
-
-Επιστρέφοντας στο σήμερα, η σύγκριση των δραστικών αποφάσεων της ΕΚΤ, γίνεται με τις «μη αποφάσεις» του Eurogroup. Ὀλα ξεκίνησαν χθες γύρω στις 4 το απόγευμα με ένα σχέδιο συμφωνίας που παρουσίασε ο Πρόεδρος Σεντένο για δαπάνες μισού τρισεκατομμυρίου ευρώ. Τα 540 δισ. (100 από Κομισιόν, 200 από ΕΤΕπ και 240 από ESM με προληπτικά κεφάλαια υπό όρους και «μνημόνιο» χωρίς Τρόικα) απέχουν αρκετά από τα 700 δισ. ή το 1 τρισ. ευρώ που ακούγονταν τις προηγούμενες μέρες.
-
-Δεν είναι όμως στα ποσά το πρόβλημα. Άλλωστε και τα 540 δισ. ευρώ αφορούν το «τώρα» και όχι το «αύριο» της Κρίσης. Βόρειοι και Νότιοι μπορεί και να μην τα χαλάσουν στα ποσά ενώ και οι δημοσιονομικοί κανόνες «έχουν πάει περίπατο» λόγω κορωνοϊού.
-
-Το δύσκολο είναι πού θα βρεθούν τα τόσα πολλά λεφτά. Φυσικά από δανεικά, αλλά όλα σκαλώνουν στην «αμοιβαιοποίηση» του χρέους, δηλαδή στο ποιος θα πληρώσει τελικά για να δανειστούν Ιταλία, Ισπανία και… λοιποί συγγενείς του Ευρωπαϊκού Νότου, όσα χρειάζονται για να αντιμετωπίσουν την υγειονομική κρίση. Το ευρωομόλογο 1 τρισ. θα έφερνε φθηνότερο χρήμα, γιατί θα ήταν σαν να τα δανείζεται η Γερμανία. Θα ήταν όμως και «χωρίς όρους» χρήματα για όλες τις χώρες, κάτι που κι αν ακόμα συμφωνηθεί, μπορεί να έριχνε την κυβέρνηση στη Γερμανία ή να μην περνούσε ποτέ από τη Γερμανική Βουλή. Οι άλλες λύσεις όμως με δάνεια από τον ESM «τρομάζουν» όποιον αναγκαστεί να πάει πρώτος να ζητήσει λεφτά, γιατί θα του τεθούν όροι και προϋποθέσεις στο τι θα τα κάνει και πώς θα τα επιστρέψει.</string>
 </resources>
