--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="notification_title">FSKorinthias News</string>
     <string name="notification_message">FSKorinthias News</string>
     <string name="save_first_news_article">first_news_article</string>
+    <string name="action_policy">Privacy policy</string>
 
 </resources>
