Creates 3rd fragment at bottom navigation for Efimeries

--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -12,4 +12,5 @@
     <string name="shareNews">Αποστολή:</string>
     <string name="notification_title">ΦΣ Κορινθίας νέα</string>
     <string name="action_policy">Πολιτική απορρήτου</string>
+    <string name="title_efimeries">Εφημερίες</string>
 </resources>
