--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="notification_message" translatable="false">FSKorinthias News</string>
     <string name="save_first_news_article" translatable="false">first_news_article</string>
     <string name="action_policy">Privacy policy</string>
+    <string name="title_efimeries">On Duty</string>
 
 </resources>
