Shows Perioxes for efimeries

--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_home">ΦΣ Κορινθίας</string>
     <string name="title_dashboard">ΦΣ Κορινθίας</string>
     <string name="title_home_bottom">Σημαντικά νέα</string>
-    <string name="title_dashboard_bottom">Διάφορα νέα</string>
+    <string name="title_dashboard_bottom">Όλα τα νέα</string>
     <string name="title_activity_details">ΦΣ Κορινθίας</string>
     <string name="next">Επόμενο</string>
     <string name="previous">Προηγούμενο</string>
