--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="save_first_news_article" translatable="false">first_news_article</string>
     <string name="action_policy">Privacy policy</string>
     <string name="title_efimeries">On Duty</string>
+    <string name="title_activity_efimeries_details">District</string>
 
 </resources>
