Shows correctly efimeries and info. Also it shows dialodboxes for epikoinonia and efimeries

--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -13,5 +13,12 @@
     <string name="notification_title">ΦΣ Κορινθίας νέα</string>
     <string name="action_policy">Πολιτική απορρήτου</string>
     <string name="title_efimeries">Εφημερίες</string>
-    <string name="title_activity_efimeries_details">Περιοχή</string>
+    <string name="title_activity_efimeries_details"></string>
+    <string name="epilogiOK">OK</string>
+    <string name="enimerosiFinal">Ενημέρωση για τις εφημερίες</string>
+    <string name="action_info">Διευκρινίζεται ότι, βάσει ειδικών διατάξεων του Προεδρικού Διατάγματος 479/1981, στις περιοχές που λειτουργούν από 2 έως 6 φαρμακεία, το εφημερεύον φαρμακείο: 1) Δικαιούται μεσημβρινή διακοπή, 2) Δεν διανυκτερεύει με παρόντα τον φαρμακοποιό εντός του φαρμακείου και 3) Κατά τις Κυριακές και τις Αργίες λειτουργεί κανονικά από τις 9:00 έως τις 13:00 Κατά τις ώρες της μεσημβρινής διακοπής, καθώς επίσης και τις υπόλοιπες πέραν του ωραρίου λειτουργίας του (από 23.00 για την περίοδο από 16 Μαΐου έως 15 Οκτωβρίου, από 22.00 για την περίοδο από 16 Οκτωβρίου έως 15 Μαΐου, και από 13:00 κατά τις Κυριακές και τις Αργίες), ο εφημερεύων φαρμακοποιός αναρτά το ονοματεπώνυμό του, το τηλέφωνο επικοινωνίας, την διεύθυνση κατοικίας στην πρόσοψη του φαρμακείου και εξυπηρετεί το κοινό εφόσον δεχτεί τηλεφωνικό κάλεσμα.</string>
+    <string name="efimeriesShare">Εφημερίες απο το ΦΣ Κορινθίας:</string>
+    <string name="action_epikoinonia">Επικοινωνία</string>
+    <string name="epikoinoniaMeSyllogo">Επικοινωνία με το Φαρμακευτικό Σύλλογο</string>
+    <string name="epikoinoniaTilefona">Αδειμάντου 63 Κόρινθος \nΤηλέφωνο 2741029778  \nFax 2741029778  \nemail : info@fsk.gr</string>
 </resources>
