Solves fab button visibility issue and sliding scroll problem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,13 @@
     <string name="epikoinoniaTilefona">Adeimantou 63 Korinthos \nTelephone 2741029778  \nFax 2741029778  \nemail : info@fsk.gr</string>
     <string name="action_apostoli">Share app</string>
     <string name="shareApplication">Share app:</string>
-    <string name="dummy_text">Ολοκληρώθηκε σήμερα η δωρεά ειδών ατομικής προστασίας και υγιεινής στα Κέντρα Υγείας τοου Νομού. Ο ΠΕΙΦΑΣΥΝ προσέφερε στα 6 Κέντρα Υγείας του Νομού Κορινθίας μάσκες και αντισηπτικά με προτεραιότητα σε αυτά αστικού τύπου. Είχε προηγηθεί αντίστοιχη δράση προσφοράς στο Νοσοκομείο της Κορίνθου και εξοπλισμού των μονάδων του ΕΚΑΒ...</string>
+    <string name="dummy_text">Ολοκληρώθηκε σήμερα η δωρεά ειδών ατομικής προστασίας
+        και υγιεινής στα Κέντρα Υγείας τοου Νομού. Ο ΠΕΙΦΑΣΥΝ προσέφερε στα 6 Κέντρα Υγείας του
+        Νομού Κορινθίας μάσκες και αντισηπτικά με προτεραιότητα σε αυτά αστικού τύπου. Είχε προηγηθεί
+        αντίστοιχη δράση προσφοράς στο Νοσοκομείο της Κορίνθου και εξοπλισμού των μονάδων του ΕΚΑΒ… \n
+    Ολοκληρώθηκε σήμερα η δωρεά ειδών ατομικής προστασίας
+        και υγιεινής στα Κέντρα Υγείας τοου Νομού. Ο ΠΕΙΦΑΣΥΝ προσέφερε στα 6 Κέντρα Υγείας του
+        Νομού Κορινθίας μάσκες και αντισηπτικά με προτεραιότητα σε αυτά αστικού τύπου. Είχε προηγηθεί
+        αντίστοιχη δράση προσφοράς στο Νοσοκομείο της Κορίνθου και εξοπλισμού των μονάδων του ΕΚΑΒ…</string>
 
 </resources>
