Tidies firebase list item and adds vibration to notifications

--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -26,4 +26,5 @@
     <string name="shareApplication">Share app:</string>
     <string name="video">Βίντεο</string>
     <string name="hint_editTextView_sliding_layout">Προσθέστε σχόλιο</string>
+    <string name="numberMessages">μηνύματα</string>
 </resources>
