--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -28,4 +28,5 @@
     <string name="hint_editTextView_sliding_layout">Προσθέστε σχόλιο</string>
     <string name="numberMessages">μηνύματα</string>
     <string name="error_firebase_auth">Πρόβλημα στην εγγραφή. Ξαναπροσπαθήστε!</string>
+    <string name="log_out">Αποσύνδεση</string>
 </resources>
