Adds scrim to details activity

--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -10,7 +10,7 @@
     <string name="previous">Προηγούμενο</string>
     <string name="mainShareNews">Άρθρο απο το Φ.Σ.Κορινθίας:</string>
     <string name="shareNews">Αποστολή:</string>
-    <string name="notification_title">ΦΣ Κορινθίας - Νέο άρθρο</string>
+    <string name="notification_title">Νέο άρθρο</string>
     <string name="action_policy">Πολιτική απορρήτου</string>
     <string name="title_efimeries">Εφημερίες</string>
     <string name="title_activity_efimeries_details" />
