--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,8 @@
     <string name="log_out">Log out</string>
     <string name="msg_subscribed" translatable="false">Succesfull subscribed</string>
     <string name="msg_subscribe_failed" translatable="false">Subscribe failed</string>
+    <string name="happyComment">I am happy &#128522;</string>
+    <string name="saintComment">&#128519;</string>
+    <string name="loveComment">&#128525;</string>
 
 </resources>
